--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
     <div class="top-container">
-        <img src="images/cloud.png" alt="cloud-image">
-        <h1>I'm Frannz</h1>
-        <p>A Programmer</p>
-        <img src="images/cloud.png" alt="cloud-image">
+        <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
+        <h1>I'm Frannz.</h1>
+        <p>a programmer</p>
+        <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
         <img src="images/mountain.png" alt="cloud-image">
 
     </div>
