Finished some videos and added some contents

--- a/index.html
+++ b/index.html
@@ -6,25 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frannz Suaverdez</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Neucha&family=Sacramento&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <div class="top-container">
         <img class="top-cloud" src="images/cloud.png" alt="cloud-image">
         <h1>I'm Frannz.</h1>
-        <p>a programmer</p>
+        <h2>a <span>pro</span>grammer</h2>
         <img class="bottom-cloud" src="images/cloud.png" alt="cloud-image">
         <img src="images/mountain.png" alt="cloud-image">
 
     </div>
 
     <div class="middle-container">
-        
+        <div class="profile">
+            <img src="images/favicon.png" alt="FS-Logo">
+            <h2>Hello.</h2>
+            <p>I am a Information Technology Student and I'm planning to be a Full Stack Developer.</p>
+        </div>
+        <hr>
+        <div class="skills">
+            <h2>My Skills.</h2>
+            <div class="skill-row">
+                <img class="java" src="https://image.flaticon.com/icons/svg/2393/2393287.svg" alt="java-icon">
+                <h3>Basic Java</h3>
+                <p>I know a little bit of Java.</p>
+            </div>
+            <div class="skill-row">
+                <img class="pc" src="https://image.flaticon.com/icons/svg/2933/2933245.svg" alt="pc-con">
+                <h3>Minor Skills</h3>
+                <p>I know basics of Photoshop and Cinema 4D. I used to make Minecraft Rendered Photo and enjoyed it alot
+                    but stopped due to having a low spec laptop that hardly can render photos anymore.</p>
+            </div>
+        </div>
+        <hr>
+        <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>Email Me.</h3>
+            <p>Send me an email for questions and offers.</p>
+            <a class="btn" href="mailto:sfrannz@gmail.com">CONTACT ME</a>
+        </div>
     </div>
-    <div class="bottom-container">
 
+
+    <div class="bottom-container">
+        <a class="footer-link" href="https://twitter.com/FSuaverdez">Twitter</a>
+        <a class="footer-link" href="https://www.facebook.com/FSuaverdez">Facebook</a>
+        <p>© 2020 Frannz Suaverdez.</p>
     </div>
+
 </body>
 
 </html>
