--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             <h2>My Skills.</h2>
             <div class="skill-row">
                 <img class="java" src="https://image.flaticon.com/icons/svg/2393/2393287.svg" alt="java-icon">
-                <h3>Basic Java</h3>
-                <p>I know a little bit of Java.</p>
+                <h3>Basic Programming</h3>
+                <p>I know a little bit of C, Java, HTML and CSS. I'm currently trying to make some projects to build a portfolio :)</p>
             </div>
             <div class="skill-row">
                 <img class="pc" src="https://image.flaticon.com/icons/svg/2933/2933245.svg" alt="pc-con">
