Styled some stuffs

--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
         <div class="profile">
             <img src="images/favicon.png" alt="FS-Logo">
             <h2>Hello.</h2>
-            <p>I am a Information Technology Student and I'm planning to be a Full Stack Developer.</p>
+            <p class="intro">I am a Information Technology Student and I'm planning to be a Full Stack Developer.</p>
         </div>
         <hr>
         <div class="skills">
             <h2>My Skills.</h2>
             <div class="skill-row">
-                <img class="java" src="https://image.flaticon.com/icons/svg/2393/2393287.svg" alt="java-icon">
+                <img class="java" src="https://media.giphy.com/media/26n7b7PjSOZJwVCmY/giphy.gif" alt="java-icon">
                 <h3>Basic Programming</h3>
-                <p>I know a little bit of C, Java, HTML and CSS. I'm currently trying to make some projects to build a portfolio :)</p>
+                <p>I know a little bit of C, Java, HTML and CSS. I'm currently planning to make some projects to build a
+                    portfolio :).</p>
             </div>
             <div class="skill-row">
                 <img class="pc" src="https://image.flaticon.com/icons/svg/2933/2933245.svg" alt="pc-con">
@@ -47,16 +48,16 @@
         <div class="contact-me">
             <h2>Get In Touch</h2>
             <h3>Email Me.</h3>
-            <p>Send me an email for questions and offers.</p>
+            <p class="contact-msg">Send me an email for questions and offers.</p>
             <a class="btn" href="mailto:sfrannz@gmail.com">CONTACT ME</a>
         </div>
     </div>
 
 
     <div class="bottom-container">
-        <a class="footer-link" href="https://twitter.com/FSuaverdez">Twitter</a>
         <a class="footer-link" href="https://www.facebook.com/FSuaverdez">Facebook</a>
-        <p>© 2020 Frannz Suaverdez.</p>
+        <a class="footer-link" href="https://twitter.com/FSuaverdez">Twitter</a>
+        <p class="cpyr">© 2020 Frannz Suaverdez.</p>
     </div>
 
 </body>
