Styled some stuffs

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
             <div class="skill-row">
                 <img class="java" src="https://media.giphy.com/media/26n7b7PjSOZJwVCmY/giphy.gif" alt="java-icon">
                 <h3>Basic Programming</h3>
-                <p>I know a little bit of C, Java, HTML and CSS. I'm currently planning to make some projects to build a
+                <p class="desc1">I know a little bit of C, Java, HTML and CSS. I'm currently planning to make some projects to build a
                     portfolio :).</p>
             </div>
             <div class="skill-row">
                 <img class="pc" src="https://image.flaticon.com/icons/svg/2933/2933245.svg" alt="pc-con">
                 <h3>Minor Skills</h3>
-                <p>I know basics of Photoshop and Cinema 4D. I used to make Minecraft Rendered Photo and enjoyed it alot
+                <p class="desc2">I know basics of Photoshop and Cinema 4D. I used to make Minecraft Rendered Photo and enjoyed it alot
                     but stopped due to having a low spec laptop that hardly can render photos anymore.</p>
             </div>
         </div>
