--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="profile">
             <img src="images/favicon.png" alt="FS-Logo">
             <h2>Hello.</h2>
-            <p class="intro">I am a Information Technology Student and I'm planning to be a Full Stack Developer.</p>
+            <p class="intro">I am an Information Technology Student and I'm planning to be a Full Stack Developer.</p>
         </div>
         <hr>
         <div class="skills">
