--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <h2>Get In Touch</h2>
             <h3>Email Me.</h3>
             <p class="contact-msg">Send me an email for questions and offers.</p>
-            <a class="btn" href="mailto:sfrannz@gmail.com">CONTACT ME??</a>
+            <a class="btn" href="mailto:sfrannz@gmail.com">CONTACT ME</a>
         </div>
     </div>
 
